--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,5 @@
   },
   "peacock.color": "#ffff",
   "editor.cursorSurroundingLinesStyle": "all",
-  "editor.formatOnSave": true,
-  "editor.formatOnPaste": true,
-  "editor.formatOnType": true
+  "editor.formatOnSave": true
 }
